<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MaMeteo</string>
    <string name="meteo_title">METEO ESGI</string>
    <string name="temperature">Température :</string>
    <string name="humidite">Humidité : </string>
    <string name="vent">Vent : </string>
    <string name="back">Retour</string>
    <string name="affiche_temp">Afficher les températures à venir</string>
    <string name="icon_temp">icon température</string>
    <string name="title_next_temp">Températures pour les 3 prochains jours :</string>
    <string name="name_ville">Tapez le nom de la ville</string>
    <string name="temp_title_button">Quel temps fait-il?</string>
    
</resources>